# atomistic-parsers

./: .gitignore  README.md  openkim_archive.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-actions.yaml
atomisticparsers/: __init__.py
atomisticparsers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
atomisticparsers/amber/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/amber/metainfo/: __init__.py  amber.py
atomisticparsers/asap/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/asap/metainfo/: __init__.py  asap.py
atomisticparsers/bopfox/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/bopfox/metainfo/: __init__.py  bopfox.py
atomisticparsers/dftbplus/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/dftbplus/metainfo/: __init__.py  dftbplus.py
atomisticparsers/dlpoly/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/dlpoly/metainfo/: __init__.py  dl_poly.py
atomisticparsers/gromacs/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/gromacs/metainfo/: __init__.py  gromacs.py
atomisticparsers/gromos/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/gromos/metainfo/: __init__.py  gromos.py
atomisticparsers/gulp/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/gulp/metainfo/: __init__.py  gulp.py
atomisticparsers/h5md/: README.md  __init__.py  __main__.py  nomad_plugin.yaml  parser.py  parser_stripped.py
atomisticparsers/h5md/metainfo/: __init__.py  h5md.py
atomisticparsers/hoomdblue/: README.md  __init__.py  __main__.py  metadata.yaml  parser.py
atomisticparsers/hoomdblue/metainfo/: __init__.py  hoomdblue.py
atomisticparsers/lammps/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/lammps/metainfo/: __init__.py  lammps.py
atomisticparsers/libatoms/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/libatoms/metainfo/: __init__.py  lib_atoms.py
atomisticparsers/mopac/: metadata.yaml  parser.py
atomisticparsers/mopac/metainfo/: mopac.py
atomisticparsers/namd/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/namd/metainfo/: __init__.py  namd.py
atomisticparsers/openkim/: README.md  __init__.py  __main__.py  metadata.yaml  parser.py
atomisticparsers/openkim/metainfo/: __init__.py  openkim.py
atomisticparsers/tinker/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/tinker/metainfo/: __init__.py  tinker.py
atomisticparsers/utils/: __init__.py  mdanalysis.py  parsers.py
atomisticparsers/xtb/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
atomisticparsers/xtb/metainfo/: __init__.py  xtb.py
tests/: test_amberparser.py  test_asapparser.py  test_bopfoxparser.py  test_dftbplusparser.py  test_dlpolyparser.py  test_gromacsparser.py  test_gromosparser.py  test_gulpparser.py  test_h5md.py  test_hoomdblueparser.py  test_lammpsparser.py  test_libatomsparser.py  test_mopacparser.py  test_namdparser.py  test_openkimparser.py  test_tinkerparser.py  test_xtbparser.py
tests/data/amber/: polyAT_cio.inpcrd  polyAT_cio.prmtop  polyAT_vac.inpcrd  polyAT_vac.prmtop  polyAT_vac_init_min.in  polyAT_vac_init_min.out  polyAT_vac_init_min.rst  polyAT_wat.inpcrd  polyAT_wat.prmtop
tests/data/asap/: geo_opt1.traj  moldyn1.traj
tests/data/bopfox/FeC.fcc.distorted.CM/: infox.bx  log.bx  models.bx  structure.bx
tests/data/bopfox/Mo-W/: infox.bx  log.bx  models.bx  struc.bx
tests/data/bopfox/dimer/: infox.bx  log.bx  models.bx  structures.dimer.W.MD.xyz  structures.dimer.W.bx  structures.dimer.W.final.bx
tests/data/bopfox/fcc.1x1x1.distorted/: infox.bx  log.bx  structures.fcc.1x1x1.distorted.0.05.bx  structures.fcc.1x1x1.distorted.0.05.final.bx
tests/data/bopfox/fcc.2x2x2.vacancy.SCFreuseHii/: infox.bx  log.bx  structures.fcc.2x2x2.vacancy.RX.xyz  structures.fcc.2x2x2.vacancy.bx  structures.fcc.2x2x2.vacancy.final.bx
tests/data/bopfox/v2_W.bcc.cell/: infox.bx  log.bx  models.bx  struc.bcc.bx  struc.bcc.final.bx
tests/data/dftbplus/relax/: dftb_in.err  dftb_in.gen  dftb_in.hsd  dftb_pin.hsd  geo_end.gen  geo_end.xyz  output
tests/data/dftbplus/static/: band.out  coords.gen  detailed.out  dftb_in.hsd  dftb_pin.hsd  slurm-259896.out
tests/data/dlpoly/bench1/: CONFIG  CONTROL  FIELD  OUTPUT  README  REVCON  REVIVE  STATIS
tests/data/gromacs/: README.md
tests/data/libatoms/: gp.xml
tests/data/openkim/: StackingFaultFccCrystal_0bar_Ac__TE_567672586460_002.json  data.json  elastic-constants.json  openkim_archive_data.json
(+335 files in other folders)
