[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'atomisticparsers'
version = '1.0'
description = 'Collection of NOMAD parsers for atomistic codes.'
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { file = "LICENSE" }
dependencies = [
    # "nomad-lab[infrastrucutre]",
    'lxml==4.7.1',
    'MDAnalysis',
    'panedr==0.2',
    'scipy>=1.7.1',
]

[project.urls]
homepage = "https://github.com/nomad-coe/atomistic-parsers"

[project.optional-dependencies]
tests = [
    'mypy==1.0.1',
    'pylint==2.13.9',
    'pylint_plugin_utils==0.5',
    'pycodestyle==2.8.0',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid==2.5.1'
]

[tool.setuptools.packages.find]
include = [
    "atomisticparsers*",
] # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
atomisticparsers = ['*/metadata.yaml', '*/README.md']
